--- a/ScreenMusic.Web/Pages/CreateMusicGenre.razor
+++ b/ScreenMusic.Web/Pages/CreateMusicGenre.razor
@@ -7,8 +7,14 @@
 
     <MudText Class="mt-8" Typo="Typo.h4">Cadastro do Gênero Musical</MudText>
 
-    <MudForm>
+    @if (!string.IsNullOrEmpty(errorMessage))
+    {
+        <MudAlert Severity="Severity.Error">
+            @errorMessage
+        </MudAlert>
+    }
 
+    <MudForm>
         <MudTextField Class="mt-4" T="string" Placeholder="Nome do Gênero Musical" Variant="Variant.Outlined" @bind-Value="name" Required="true" RequiredError="Campo obrigatório." />
 
         <MudTextField Class="mt-4" T="string" Placeholder="Descrição do Gênero Musical" Variant="Variant.Outlined" @bind-Value="description" Lines="4" Required="true" RequiredError="Campo obrigatório." />
@@ -19,19 +25,23 @@
                 <MudButton Variant="Variant.Filled" @onclick="Create" Color="Color.Primary" Class="ml-auto">Cadastrar</MudButton>
             </div>
         </div>
-
     </MudForm>
 </MudPaper>
 
 @code {
     private string? name;
     private string? description;
+    private string? errorMessage;
 
     private async Task Create()
     {
-        var request = new InputCreateMusicGenre(name!, description!);
-        await musicGenreServiceClient.Create(request);
-        navigationManager.NavigateTo("/MusicGenre");
+        var inputCreateMusicGenre = new InputCreateMusicGenre(name!, description!);
+        var response = await musicGenreServiceClient.Create(inputCreateMusicGenre);
+
+        if (!response.Success)
+            errorMessage = response.ErrorMessage ?? "Erro ao criar gênero musical.";
+        else
+            navigationManager.NavigateTo("/MusicGenre");
     }
 
     private void Return()
