--- a/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml
+++ b/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml
@@ -23,21 +23,40 @@
                             <i class="bi bi-house-fill"></i><span class="ms-1 text-white">Home</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a asp-area="" asp-controller="Artist" asp-action="Index" class="nav-link">
-                            <i class="bi bi-mic-fill"></i><span class="ms-1 text-white">Artista</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a asp-area="" asp-controller="Music" asp-action="Index" class="nav-link">
-                            <i class="bi bi-music-note-beamed"></i><span class="ms-1 text-white">Música</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a asp-area="" asp-controller="MusicGenre" asp-action="Index" class="nav-link">
-                            <i class="bi bi-vinyl-fill"></i><span class="ms-1 text-white">Gênero Musical</span>
-                        </a>
-                    </li>
+                    @if (User.Identity!.IsAuthenticated)
+                    {                        
+                        <li class="nav-item">
+                            <a asp-area="" asp-controller="Artist" asp-action="Index" class="nav-link">
+                                <i class="bi bi-mic-fill"></i><span class="ms-1 text-white">Artista</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-area="" asp-controller="Music" asp-action="Index" class="nav-link">
+                                <i class="bi bi-music-note-beamed"></i><span class="ms-1 text-white">Música</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-area="" asp-controller="MusicGenre" asp-action="Index" class="nav-link">
+                                <i class="bi bi-vinyl-fill"></i><span class="ms-1 text-white">Gênero Musical</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <form asp-action="Logout" asp-controller="Authentication" method="post" class="nav-link">
+                                <button type="submit" class="btn btn-link">
+                                    <i class="bi bi-door-open-fill"></i><span class="ms-1 text-white">Logout</span>
+                                </button>
+                            </form>
+                        </li>
+                    }
+                    else
+                    {
+                        
+                        <li class="nav-item">
+                            <a asp-area="" asp-controller="Authentication" asp-action="Login" class="nav-link">
+                                <i class="bi bi-door-closed-fill"></i><span class="ms-1 text-white">Login</span>
+                            </a>
+                        </li>
+                    }
                 </ul>
             </div>
 
